basic user profiles with status updates working, need to setup permissions
